--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       padding: 2rem;
       text-align: center;
       max-width: 900px;
-      margin: auto;
+      margin: 
     }
     .logo {
       width: 140px;
@@ -151,7 +151,7 @@
 </head>
 <body onload="updateReward()">
   <div class="container">
-    <img alt="Logo" class="logo" src="logo.png"/>
+   <img alt="Logo" class="logo" src="https://bronze-decisive-bison-807.mypinata.cloud/ipfs/bafybeiheunbptro3ovclreuxhbf4jdjqifax6rkpxqm6qeq3z4q3yyuvke"/>
     <h1>GrumpyShiba Coin</h1>
     <h2 class="matrix-title"> $GSHIBA </h2>
     <p>Earn Solana rewards every 5 minutes just by holding $GSHIBA</p>
