--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       to { text-shadow: 0 0 15px #ff6600, 0 0 30px #ff6600; }
     }
 
-    /* LOGO GECKOTERMINAL IN BASSO A SINISTRA */
+    /* GeckoTerminal logo in basso a sinistra */
     #gecko-logo {
       position: fixed;
       bottom: 20px;
@@ -222,16 +222,16 @@
       <p>The 10% tax on transactions is automatically converted to Solana and distributed to all holders every 5 minutes. This creates a passive income stream just by holding $GSHIBA tokens in your wallet.</p>
     </div>
 
+    <!-- GeckoTerminal Logo in basso a sinistra -->
+    <div id="gecko-logo">
+      <a href="https://www.geckoterminal.com/solana/pools/4e9XAvAzKiu3BEoUhMorzk5t6CjdxWKtvW2KvGvfCUGH" target="_blank" rel="noopener noreferrer">
+        <img src="https://teal-efficient-beaver-393.mypinata.cloud/ipfs/bafkreiakjgqn2e6l5koj35jmoutgukftxlwd5j5fomqaoakgth5y2uat4y" alt="GeckoTerminal" />
+      </a>
+    </div>
+
     <footer>
       2025 GrumpyShiba Coin Project — $GSHIBA TOKEN
     </footer>
-  </div>
-
-  <!-- GeckoTerminal Logo in basso a sinistra -->
-  <div id="gecko-logo">
-    <a href="https://www.geckoterminal.com/solana/pools/4e9XAvAzKiu3BEoUhMorzk5t6CjdxWKtvW2KvGvfCUGH" target="_blank" rel="noopener noreferrer">
-      <img src="https://teal-efficient-beaver-393.mypinata.cloud/ipfs/bafkreiakjgqn2e6l5koj35jmoutgukftxlwd5j5fomqaoakgth5y2uat4y" alt="GeckoTerminal" />
-    </a>
   </div>
 </body>
 </html>
