--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       width: 140px;
       margin-bottom: 20px;
     }
-    h1, h2 {
+    h2 {
       color: #fff;
       text-shadow: 0 0 8px #ff3300, 0 0 16px #ff3300;
     }
@@ -66,38 +66,73 @@
       margin: 2rem 0;
       color: #ff3300;
       font-weight: bold;
-      animation: glitch 1s infinite alternate;
+      animation: glitchSkew 1s infinite alternate;
       text-shadow: 0 0 8px #ff3300, 0 0 16px #ff6600;
     }
     .matrix-title {
       animation: glow 1.2s ease-in-out infinite alternate;
-    }
-    @keyframes glitch {
-      0% { opacity: 1; }
-      50% { opacity: 0.2; transform: scale(1.01); }
-      100% { opacity: 1; }
     }
     @keyframes glow {
       from { text-shadow: 0 0 5px #ff3300, 0 0 10px #ff3300; }
       to { text-shadow: 0 0 15px #ff6600, 0 0 30px #ff6600; }
     }
 
-    /* GeckoTerminal logo in basso a sinistra */
-    #gecko-logo {
-      position: fixed;
-      bottom: 20px;
-      left: 20px;
-      z-index: 999;
+    /* FLAME TITLE EFFECT */
+    .flame-title {
+      position: relative;
+      font-size: 2.5rem;
+      font-weight: bold;
+      color: #fff;
+      text-shadow:
+        0 0 5px #ff3300,
+        0 0 10px #ff3300,
+        0 0 20px #ff6600,
+        0 0 40px #ff0000;
+      animation: flameGlow 1.2s infinite ease-in-out;
     }
 
-    #gecko-logo img {
+    @keyframes flameGlow {
+      0% {
+        text-shadow:
+          0 0 5px #ff3300,
+          0 0 10px #ff3300,
+          0 0 20px #ff6600,
+          0 0 40px #ff0000;
+      }
+      50% {
+        text-shadow:
+          0 0 10px #ff3300,
+          0 0 20px #ff6600,
+          0 0 30px #ff0000,
+          0 0 60px #ff0000;
+      }
+      100% {
+        text-shadow:
+          0 0 5px #ff3300,
+          0 0 10px #ff3300,
+          0 0 20px #ff6600,
+          0 0 40px #ff0000;
+      }
+    }
+
+    .partners {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 2rem;
+      flex-wrap: wrap;
+      margin-top: 1rem;
+    }
+
+    .partners img {
       height: 40px;
-      opacity: 0.8;
-      transition: opacity 0.3s ease;
+      opacity: 0.85;
+      transition: opacity 0.3s ease, transform 0.3s ease;
     }
 
-    #gecko-logo img:hover {
+    .partners img:hover {
       opacity: 1;
+      transform: scale(1.05);
     }
   </style>
   <script>
@@ -164,7 +199,7 @@
 <body onload="updateReward()">
   <div class="container">
     <img alt="Logo" class="logo" src="https://bronze-decisive-bison-807.mypinata.cloud/ipfs/bafybeiheunbptro3ovclreuxhbf4jdjqifax6rkpxqm6qeq3z4q3yyuvke"/>
-    <h1>GrumpyShiba Coin</h1>
+    <h1 class="flame-title">GrumpyShiba Coin</h1>
     <h2 class="matrix-title">$GSHIBA</h2>
     <p>Earn Solana rewards every 5 minutes just by holding $GSHIBA</p>
 
@@ -222,11 +257,13 @@
       <p>The 10% tax on transactions is automatically converted to Solana and distributed to all holders every 5 minutes. This creates a passive income stream just by holding $GSHIBA tokens in your wallet.</p>
     </div>
 
-    <!-- GeckoTerminal Logo in basso a sinistra -->
-    <div id="gecko-logo">
-      <a href="https://www.geckoterminal.com/solana/pools/4e9XAvAzKiu3BEoUhMorzk5t6CjdxWKtvW2KvGvfCUGH" target="_blank" rel="noopener noreferrer">
-        <img src="https://teal-efficient-beaver-393.mypinata.cloud/ipfs/bafkreiakjgqn2e6l5koj35jmoutgukftxlwd5j5fomqaoakgth5y2uat4y" alt="GeckoTerminal" />
-      </a>
+    <div class="section">
+      <h2 class="matrix-title">[Partners]</h2>
+      <div class="partners">
+        <a href="https://www.geckoterminal.com/solana/pools/4e9XAvAzKiu3BEoUhMorzk5t6CjdxWKtvW2KvGvfCUGH" target="_blank" rel="noopener noreferrer">
+          <img src="https://teal-efficient-beaver-393.mypinata.cloud/ipfs/bafkreiakjgqn2e6l5koj35jmoutgukftxlwd5j5fomqaoakgth5y2uat4y" alt="GeckoTerminal">
+        </a>
+      </div>
     </div>
 
     <footer>
